# viper

./: .gitignore  Makefile  README.md  install.sh
_docs/: todo.md
cmake/: CMakeLists.txt
docs/: README.md  _sidebar.md  binary.md  control_statements.md  coverpage.md  files.md  function.md  future.md  guide.md  index.html  internals.md  operators.md  release.md  todo.md  variable.md
docs/datatypes/: boolean.md  list.md  map.md  number.md  string.md
docs/developer/: intro.md
docs/oops/: constructor.md  inheritance.md  intro.md
examples/: boolean.viper  built_in_function.viper  class_constructor.viper  class_example.viper  class_example_1.viper  class_example_2.viper  class_example_3.viper  closure.viper  collections.viper  comments.viper  continue.viper  for_example.viper  for_loop.viper  function.viper  hello-world.viper  if_example.viper  inheritence.viper  intro.md  list.viper  list_example.viper  map.viper  number.viper  string.viper  variable.viper  variable.vy  variable_example.viper  while_example.viper
examples/basics/: comments.viper  even_odd.viper  hello-world.viper  logical_operators.viper  numbers.viper  switch.viper
examples/class/: class.viper
examples/datatypes/: boolean.viper  list.viper  map.viper  number.viper  string.viper
examples/file/: file_metadata.viper  read_and_write.viper
examples/functions/: built_in_function.viper  function.viper
examples/loop/: each.viper
scripts/: run_main.sh  test.sh
src/: builtin.c  builtin.h  bytes.c  bytes.h  chunk.c  chunk.h  common.h  comp.c  comp.h  compiler.c  compiler.h  debug.c  debug.h  file.c  file.h  list.c  list.h  main.c  map.c  map.h  memory.c  memory.h  object.c  object.h  runtime.c  runtime.h  scanner.c  scanner.h  table.c  table.h  token.c  token.h  utils.c  utils.h  value.c  value.h  vm.c  vm.h
